[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/btn_quit.png" type="Texture" id=1]
[ext_resource path="res://Sprites/btn_archives.png" type="Texture" id=2]
[ext_resource path="res://Sprites/btn_play.png" type="Texture" id=3]
[ext_resource path="res://Sprites/btn_resume.png" type="Texture" id=4]
[ext_resource path="res://Sprites/btn_settings.png" type="Texture" id=5]
[ext_resource path="res://GameEntity/MainMenu.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 74.1516, 23.3405 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Area_Play" type="Area2D" parent="."]
position = Vector2( 0, 71 )

[node name="Sprite" type="Sprite" parent="Area_Play"]
position = Vector2( -2, -178 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Play"]
position = Vector2( 3.17838, -176.93 )
shape = SubResource( 1 )

[node name="Area_Resume" type="Area2D" parent="."]
position = Vector2( 0, 71 )

[node name="Sprite" type="Sprite" parent="Area_Resume"]
position = Vector2( -0.940552, -110.194 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Resume"]
position = Vector2( -0.529755, -108.065 )
shape = SubResource( 1 )

[node name="Area_Archives" type="Area2D" parent="."]
position = Vector2( 0, 71 )

[node name="Sprite" type="Sprite" parent="Area_Archives"]
position = Vector2( 0.648621, -37.3564 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Archives"]
position = Vector2( -0.529755, -37.0652 )
shape = SubResource( 1 )

[node name="Area_Settings" type="Area2D" parent="."]
position = Vector2( 0, 71 )

[node name="Sprite" type="Sprite" parent="Area_Settings"]
position = Vector2( 2.64862, 43.6436 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Settings"]
position = Vector2( -0.529755, 41.9348 )
shape = SubResource( 1 )

[node name="Area_Quit" type="Area2D" parent="."]
position = Vector2( 0, 71 )

[node name="Sprite" type="Sprite" parent="Area_Quit"]
position = Vector2( 2.64862, 120.644 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Quit"]
position = Vector2( 2.47025, 119.935 )
shape = SubResource( 1 )

[connection signal="mouse_entered" from="Area_Play" to="." method="_on_Area_Play_mouse_entered"]
[connection signal="mouse_exited" from="Area_Play" to="." method="_on_Area_Play_mouse_exited"]
[connection signal="mouse_entered" from="Area_Resume" to="." method="_on_Area_Resume_mouse_entered"]
[connection signal="mouse_exited" from="Area_Resume" to="." method="_on_Area_Resume_mouse_exited"]
[connection signal="mouse_entered" from="Area_Archives" to="." method="_on_Area_Archives_mouse_entered"]
[connection signal="mouse_exited" from="Area_Archives" to="." method="_on_Area_Archives_mouse_exited"]
[connection signal="mouse_entered" from="Area_Settings" to="." method="_on_Area_Settings_mouse_entered"]
[connection signal="mouse_exited" from="Area_Settings" to="." method="_on_Area_Settings_mouse_exited"]
[connection signal="mouse_entered" from="Area_Quit" to="." method="_on_Area_Quit_mouse_entered"]
[connection signal="mouse_exited" from="Area_Quit" to="." method="_on_Area_Quit_mouse_exited"]
